# boltzgen

./: pyproject.toml
src/boltzgen/data/parse/: schema.py
src/boltzgen/model/loss/: validation.py
